--- a/src/app/git-repos/git-repos.component.html
+++ b/src/app/git-repos/git-repos.component.html
@@ -1,39 +1,7 @@
-<div class="container-fluid">
-    <div class="overlay">
-              
-      <div class="text-center repos" id="reps">
-        <h2>Repositories</h2>
+<div class="container">
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            {{repo.email}}
+        </div>
     </div>
-    <div class="container allrepos">
-      <div class="card" appHighlight *ngFor="let repository of repo" style="width: 22rem;" class="repo">
-        <div class="card-body" >
-          <h5 class="card-title"><span class="top">Repo Name:</span> &nbsp;{{repository.name}} </h5>
-          <div class="card-text">
-            <hr>
-            <div class="desc"><span class="top">Description:</span> &nbsp;{{repository.description}} 
-              <span *ngIf="!repository.description" style="color: red;">Repository has no description!</span>
-            </div>
-            <hr>
-            <div class="card-subtitle mb-2">
-                <span class="top">Language: </span> {{repository.language}}
-            </div>
-            <div class="card-subtitle mb-2"><span class="top">Created:&nbsp; <span id="created">{{repository.created_at}}</span> &nbsp;  On:</span> &nbsp;{{repository.created_at | date}}
-            </div>
-          </div>
-          </div>
-          <div class="card-footer">
-            <div class="btn-group" role="group" aria-label="Third group">
-              <button class="btn btn-sm btn-primary"><i class="fa fa-eye" style="font-size:16px"></i> &nbsp;<span class="forks">{{repository.watchers_count}}</span></button>
-            </div>
-            <div class="btn-group" role="group" aria-label="Third group">
-              <button class="btn btn-sm btn-outline-warning"><i class="fa fa-code-fork" style="font-size:16px"></i> &nbsp;<span class="forks">{{repository.forks}}</span></button>
-            </div>
-            <br><br>
-            <div class="btn-group" role="group" aria-label="Third group">
-              <button class="btn btn-sm btn-primary" id="visit"><a href="{{repository.html_url}}" class="card-link">VIEW ON GITHUB &nbsp; <i class="fa fa-arrow-circle-right" style="font-size:16px"></i></a> </button> 
-            </div>
-          </div>
-      </div>
-    </div>
-    </div>
-    </div>
+</div>
