--- a/src/app/git-repos/git-repos.component.html
+++ b/src/app/git-repos/git-repos.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+
     <div class="panel-group">
     <div class="card">
         <div class="card-title">
@@ -23,19 +23,30 @@
         </div>
     </div>
     
-    <div class="card">
-     <div class="card-body">
-       <label class="btn btn-sucess btn-lg">Public Repositories</label>
-      </div>
-      <ul class="list-group" *ngFor="let rep of repo">
-      <li>
-       <h5 class="clear-fix">Repo name: {{rep.name}}<a href="{{rep.html_url}}" 
-                    class="btn btn-sm btn-warning pull-right">View this project on Github</a></h5>
-         <p>{{rep.description}}  || Created: {{rep.created_at}}</p>
-         <p>Language: {{rep.language}} || Forks: {{rep.forks}} || Watchers: {{rep.watchers_count}}</p>
-       </li>
-       </ul>
-      
+    <div class="list-of-repos" *ngFor="let rep of repo">
+ <!-- Card -->
+<div class="card">
+
+    <!-- Card image -->
+    <img class="card-img-top" src="https://mdbootstrap.com/img/Photos/Others/images/43.jpg" height="15px" alt="Card image cap">
+  
+    <!-- Card content -->
+    <div class="card-body">
+  
+      <!-- Title -->
+      <h4 class="card-title"><a>{{rep.name}}</a></h4>
+      <!-- Text -->
+      <p class="card-text">{{rep.description}}</p>
+      <p>Created: {{rep.created_at}}</p>
+      Language: {{rep.language}} || Forks: {{rep.forks}} || Watchers: {{rep.watchers_count}}
+      <!-- Button -->
+      <a href="{{rep.html_url}}" class="btn btn-primary">View in Github</a>
+  
+    </div>
+  
+  </div>
+  <!-- Card -->
+    
       </div>
     </div>
-</div>
+
