Added code to About component and reated routes

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,1 +1,7 @@
-<p>about works!</p>
+<div class="jumbotron">
+    <h1 class="display-4 text-center">Git Repositories Application</h1>
+    <hr class="my-4">
+    <p class="lead text-enter">An Angular Application that retrieves information about users and repositories from Github. 
+        It allows users to search for Git users and Git Repositories</p>
+        <p>Created in June 2020, Nairobi -Kenya</p>
+</div>
