--- a/src/app/search-user/search-user.component.html
+++ b/src/app/search-user/search-user.component.html
@@ -1,1 +1,8 @@
-<p>search-user works!</p>
+<form action="">
+    <div class="form-group">
+        <div class="input-group">
+        <input type="text" class="form-control" placeholder="Search git username......." [(ngModel)]="username" name="username" >
+        <button class="btn btn-primary btn-sm" (ckick)="getUser()">Search for user</button>
+    </div>
+    </div>
+</form>
