--- a/src/app/git-repository/git-repository.component.html
+++ b/src/app/git-repository/git-repository.component.html
@@ -1,1 +1,40 @@
-<p>git-repository works!</p>
+<div class="container-fluid">
+    <div class="overlay">
+      
+        
+      <div class="text-center repos" id="reps">
+        <h2>Repositories</h2>
+    </div>
+    <div class="container allrepos">
+      <div class="card" appHighlight *ngFor="let rep of repos" style="width: 22rem;" class="repo">
+        <div class="card-body" >
+          <h5 class="card-title"><span class="top">Repo Name:</span> &nbsp;{{rep.name}} </h5>
+          <div class="card-text">
+            <hr>
+            <div class="desc"><span class="top">Description:</span> &nbsp;{{rep.description}} 
+              <span *ngIf="!rep.description" style="color: red;">Repository has no description!</span>
+            </div>
+            <hr>
+            <div class="card-subtitle mb-2">
+                <span class="top">Language: </span> {{rep.language}}
+            </div>
+            <div class="card-subtitle mb-2"><span class="top">Created:&nbsp; <span id="created">{{rep.created_at}}</span> &nbsp;  On:</span> &nbsp;{{rep.created_at | date}}
+            </div>
+          </div>
+          </div>
+          <div class="card-footer">
+            <div class="btn-group" role="group" aria-label="Third group">
+              <button class="btn btn-sm btn-primary"><i class="fa fa-eye" style="font-size:16px"></i> &nbsp;<span class="forks">{{rep.watchers_count}}</span></button>
+            </div>
+            <div class="btn-group" role="group" aria-label="Third group">
+              <button class="btn btn-sm btn-outline-warning"><i class="fa fa-code-fork" style="font-size:16px"></i> &nbsp;<span class="forks">{{rep.forks}}</span></button>
+            </div>
+            <br><br>
+            <div class="btn-group" role="group" aria-label="Third group">
+              <button class="btn btn-sm btn-primary" id="visit"><a href="{{rep.html_url}}" class="card-link">VIEW ON GITHUB &nbsp; <i class="fa fa-arrow-circle-right" style="font-size:16px"></i></a> </button> 
+            </div>
+          </div>
+      </div>
+    </div>
+    </div>
+    </div>
