Added styling to search bar

--- a/src/app/git-repos/git-repos.component.html
+++ b/src/app/git-repos/git-repos.component.html
@@ -34,8 +34,8 @@
                 <li class="list-group-item list-group-item-success"><i class="fa fa-briefcase"style="font-size:20px;"></i>   Description: {{rep.description}}</li>
                 <li class="list-group-item list-group-item-success"><i class="fa fa-user"style="font-size:20px;"></i>   Created on: {{rep.created_at | date}}</li>
                 <li class="list-group-item list-group-item-success"><i class="fa fa-map-marker"style="font-size:20px;"></i>   Language: {{rep.language}}</li>
-                <li class="list-group-item list-group-item-success"><i class="fa fa-clock-o"style="font-size:20px;"></i>   Forks: {{rep.forks | numCount}}</li>
-                <li class="list-group-item list-group-item-success"><i class="fa fa-inr"style="font-size:20px;"></i>   Watchers:  {{rep.watchers_count | numCount}}</li>
+                <li class= "list-group-item list-group-item-success" appRedCol><i class="fa fa-clock-o"style="font-size:20px;"></i>   Forks: {{rep.forks | numCount}}</li>
+                <li class="list-group-item list-group-item-success" appRedCol><i class="fa fa-inr"style="font-size:20px;"></i>   Watchers:  {{rep.watchers_count | numCount}}</li>
               </ul>
               
             </div>
