Added name filed to user class and all dependent files

--- a/src/app/git-repos/git-repos.component.html
+++ b/src/app/git-repos/git-repos.component.html
@@ -3,7 +3,7 @@
     <div class="panel-group">
     <div class="card">
         <div class="card-title">
-           <label class="btn btn-success btn-lg">Github Profile for:==={{user.login}}</label>
+           <label class="btn btn-success btn-lg">Github Profile for {{user.name}}</label>
         </div>
         <div class="card-body">
          <div class="row">
