Made corrections to routerLink in navebar html

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -5,9 +5,9 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-item nav-link active" routerLink="gitrepos" routerLinkActive="active">Git User<span class="sr-only">(current)</span></a>
-        <a class="nav-item nav-link active" routerLink="gitlist" routerLinkActive="active">Git Repos</a>
-        <a class="nav-item nav-link" routerLink="about" routerLinkActive="active">About</a>
+        <a class="nav-item nav-link active" routerLink="/gitrepos" routerLinkActive="active">Git User<span class="sr-only">(current)</span></a>
+        <a class="nav-item nav-link active" routerLink="/gitlist" routerLinkActive="active">Git Repos</a>
+        <a class="nav-item nav-link" routerLink="/about" routerLinkActive="active">About</a>
       </div>
     </div>
   </nav>
